@startuml

!include skinparams.iuml
!include statistic_frag.iuml
!include updatable_frag.iuml

abstract class Source {}

abstract class UpdatableCollection {}
note bottom
 This will contain only
 //Systematic// objects.
end note

abstract class TwoPoint {
  - {abstract} _update(params : ParamsDict)
  + {abstract} read(data : sacc.Sacc)
}

TwoPoint -up-|> Updatable
TwoPoint -up-|> Statistic

TwoPoint *--down- Source : s1
TwoPoint *--down- Source : s2
TwoPoint *--down- UpdatableCollection : systematics

class ConcreteTPF {
 - _update(params : ParamsDict)
 + required_params() : RequiredParameters
}
 
ConcreteTPF -left-|> TwoPoint 

@enduml
